fix: make sure only font files are downloaded
By default, only .woff, .woff2, and .ttf files are downloaded and replaced with a relative URL. This prevents unintentional changing of other URLs such as background images.

User can specify extensions using the fontExtensions option.

--- a/test/example_target_custom_extensions.css
+++ b/test/example_target_custom_extensions.css
@@ -3,7 +3,7 @@
   font-family: "IBM Plex Mono";
   font-style: normal;
   font-weight: 700;
-  src: local("IBM Plex Mono Bold"), local("IBMPlexMono-Bold"), url("https://1.www.s81c.com/common/carbon/plex/fonts/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Bold.woff2") format("woff2"), url("https://1.www.s81c.com/common/carbon/plex/fonts/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Bold.woff") format("woff")
+  src: local("IBM Plex Mono Bold"), local("IBMPlexMono-Bold"), url("https://1.www.s81c.com/common/carbon/plex/fonts/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Bold.woff2") format("woff2"), url("assets/fonts/IBMPlexMono-Bold.woff") format("woff")
 }
 
 @font-face {
